RESOLVED FIXED265385
[UIAsyncTextInput] fast/events/ios/contenteditable-autocapitalize.html fails when using async text input
https://bugs.webkit.org/show_bug.cgi?id=265385
Summary [UIAsyncTextInput] fast/events/ios/contenteditable-autocapitalize.html fails ...
Wenson Hsieh
Reported 2023-11-27 08:38:00 PST
Attachments
Wenson Hsieh
Comment 1 2023-11-27 09:02:36 PST
EWS
Comment 2 2023-11-27 12:50:50 PST
Committed 271162@main (76b8798632ec): <https://commits.webkit.org/271162@main> Reviewed commits have been landed. Closing PR #20935 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.